// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly 1`] = `
.emotion-6 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-6 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

@media screen and (min-width:40em) {
  .emotion-6 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 46px;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 20px;
  font-weight: 400;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 16px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 28px;
  }
}

.emotion-5 {
  grid-column: center-start/center-end;
}

.emotion-3 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

<header
  class="emotion-6"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2"
  >
    hire me
  </h3>
  <div
    class="emotion-5"
  >
    <a
      class="emotion-3"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
    <a
      class="emotion-3"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;

exports[`<Header /> renders null when data is null 1`] = `null`;

exports[`<Header /> renders null when data is undefined 1`] = `null`;

exports[`<Header /> renders when \`email\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 46px;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 20px;
  font-weight: 400;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 16px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 28px;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-3 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

<header
  class="emotion-5"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2"
  >
    hire me
  </h3>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-3"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;

exports[`<Header /> renders when \`github\` & \`email\` is \`null\` 1`] = `
.emotion-3 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-3 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

@media screen and (min-width:40em) {
  .emotion-3 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 46px;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 20px;
  font-weight: 400;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 16px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 28px;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

<header
  class="emotion-3"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2"
  >
    hire me
  </h3>
</header>
`;

exports[`<Header /> renders when \`github\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 46px;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 20px;
  font-weight: 400;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 16px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 28px;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-3 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

<header
  class="emotion-5"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2"
  >
    hire me
  </h3>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-3"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
  </div>
</header>
`;

exports[`<Header /> renders when \`name\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 46px;
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 20px;
  font-weight: 400;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 16px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 28px;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

<header
  class="emotion-5"
>
  <h2
    class="emotion-0"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-1"
  >
    hire me
  </h3>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-2"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
    <a
      class="emotion-2"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;

exports[`<Header /> renders when \`role\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 20px;
  font-weight: 400;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 16px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 28px;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

<header
  class="emotion-5"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h3
    class="emotion-1"
  >
    hire me
  </h3>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-2"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
    <a
      class="emotion-2"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;

exports[`<Header /> renders when \`status\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 64px;
  padding-bottom: 64px;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 128px;
    padding-bottom: 128px;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 36px;
  font-weight: 400;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 8px;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 46px;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 48px;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 64px;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 80px;
  }
}

<header
  class="emotion-5"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-2"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
    <a
      class="emotion-2"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;
